--- a/gb/nsc413_2.md
+++ b/gb/nsc413_2.md
@@ -1,4 +1,9 @@
 <a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/sloxqr240/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/sloxqr240/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/sloxqr240/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/sloxqr240/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/sloxqr240/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/sloxqr240/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/sloxqr240/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/sloxqr240/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/sloxqr240/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/sloxqr240/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/sloxqr240/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/sloxqr240/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/sloxqr240/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/sloxqr240/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/sloxqr240/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/sloxqr240/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/sloxqr240/www/master/t/djy/10.jpg" title="购物"></a><a href="https://www.supportepoch.org/donation?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyhomepage"><img src="https://raw.githubusercontent.com/sloxqr240/www/master/t/djy/12.jpg" title="捐款"></a></td></tr><tr><td colspan="2" VALIGN=TOP><p><a href="https://git.io/fjHxp" rel="nofollow">大纪元</a> | <a href="https://git.io/fjHxh" rel="nofollow">动态网</a> | <a href="https://git.io/fjHpv" rel="nofollow">神州</a> | <a href="https://git.io/fjHpJ" rel="nofollow">退党</a> | <a href="https://git.io/fjHpU" rel="nofollow">九评</a> | <a href="https://git.io/fjHpT" rel="nofollow">网门</a> | <a href="https://git.io/fjHpk" rel="nofollow">神韵</a> | <a href="https://git.io/fjHpI" rel="nofollow">新纪元</a> | <a href="https://git.io/fjHpL" rel="nofollow">看中国</a> | <a href="https://git.io/fjHpt" rel="nofollow">明慧网</a> | <a href="https://git.io/fjHpq" rel="nofollow">明慧十方</a> | <a href="https://git.io/fj9lQ" rel="nofollow">明慧焦点</a> | <a href="https://git.io/fjHpm" rel="nofollow">希望之声</a> | <a href="https://git.io/fjHpY" rel="nofollow">漫谈党文化</a ></p><p><a href="https://git.io/fjHpO" rel="nofollow">新唐人</a> | <a href="https://git.io/JervF" rel="nofollow">亚太台</a> | <a href="https://git.io/fjHpG" rel="nofollow">直播</a> | <a href="https://git.io/fj9lp" rel="nofollow">传奇</a> | <a href="https://git.io/fj9lX" rel="nofollow">神话</a> | <a href="https://git.io/fjHpZ" rel="nofollow">人生</a> | <a href="https://git.io/fjFNJ" rel="nofollow">伪火</a > | <a href="https://git.io/fjHpc" rel="nofollow">真相片</a> | <a href="https://git.io/fj9lK" rel="nofollow">藏字石</a> | <a href="https://git.io/fj9l5" rel="nofollow">短视频</a> | <a href="https://git.io/fjHpW" rel="nofollow">告诉未来</a > | <a href="https://git.io/fjHpl" rel="nofollow">终级目的</a> | <a href="https://git.io/fj9lM" rel="nofollow">中共活摘</a > | <a href="https://git.io/fjHp4" rel="nofollow">风雨天地行</a></p></td></tr><tr><td width="707"><h3><p><strong>大陆新闻</strong></p></h3></td><td VALIGN=TOP rowspan=50><a href="https://git.io/fj9l0" target="_blank"><img width="130" src="https://raw.githubusercontent.com/sloxqr240/djy/master/gb/130/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"></a><br><a href="https://git.io/fj9la" target="_blank"><img width="130" src="https://raw.githubusercontent.com/sloxqr240/djy/master/gb/130/9ping.jpg" title="九评共产党" alt="九评共产党"></a><br><a href="https://git.io/fj9lr" target="_blank"><img width="130" src="https://raw.githubusercontent.com/sloxqr240/djy/master/gb/130/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"></a><br><a href="https://git.io/fjFNJ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/sloxqr240/djy/master/gb/130/weihuo.jpg" title="中共的伪火骗局" alt="中共的伪火骗局"></a><br><a href="https://git.io/fj9lK" target="_blank"><img width="130" src="https://raw.githubusercontent.com/sloxqr240/djy/master/gb/130/changzhi.jpg" title="古今奇观-藏字石" alt="古今奇观-藏字石"></a><br><a href="https://git.io/fj9lP" target="_blank"><img width="130" src="https://raw.githubusercontent.com/sloxqr240/djy/master/gb/130/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"></a><br><a href="https://git.io/fj9lX" target="_blank"><img width="130" src="https://raw.githubusercontent.com/sloxqr240/djy/master/gb/130/weilai.jpg" title="未来人的神话" alt="未来人的神话"></a><br><a href="https://git.io/fj9l1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/sloxqr240/djy/master/gb/130/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"></a><br><a href="https://git.io/fj9lM" target="_blank"><img width="130" src="https://raw.githubusercontent.com/sloxqr240/djy/master/gb/130/huozhai.jpg" title="铁证如山" alt="铁证如山"></a><br><a href="https://git.io/fj9lD" target="_blank"><img width="130" src="https://raw.githubusercontent.com/sloxqr240/djy/master/gb/130/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"></a><br><a href="https://git.io/fj9ly" target="_blank"><img width="130" src="https://raw.githubusercontent.com/sloxqr240/djy/master/gb/130/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"></a><br><a href="https://git.io/fj9lS" target="_blank"><img width="130" src="https://raw.githubusercontent.com/sloxqr240/djy/master/gb/130/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"></a><br><a href="https://git.io/fj9l9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/sloxqr240/djy/master/gb/130/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"></a><br><a href="https://git.io/fj9lH" target="_blank"><img width="130" src="https://raw.githubusercontent.com/sloxqr240/djy/master/gb/130/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"></a><br><a href="https://git.io/fj9lQ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/sloxqr240/djy/master/gb/130/6c10-720.jpg" title="从610到720" alt="从610到720"></a><br><a href="https://git.io/fj9l7" target="_blank"><img width="130" src="https://raw.githubusercontent.com/sloxqr240/djy/master/gb/130/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"></a><br><a href="https://git.io/fj9l5" target="_blank"><img width="130" src="https://raw.githubusercontent.com/sloxqr240/djy/master/gb/130/1400l.jpg" title="剖析1400例" alt="剖析1400例"></a><br><a href="https://git.io/fj9lb" target="_blank"><img width="130" src="https://raw.githubusercontent.com/sloxqr240/djy/master/gb/130/425.jpg" title="万人上访真相" alt="万人上访真相"></a><br><a href="https://git.io/fj9lN" target="_blank"><img width="130" src="https://raw.githubusercontent.com/sloxqr240/djy/master/gb/130/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"></a><br><a href="https://git.io/fj9lx" target="_blank"><img width="130" src="https://raw.githubusercontent.com/sloxqr240/djy/master/gb/130/jian-z513.jpg" title="见证513" alt="见证513"></a><br><a href="https://git.io/fj9lp" target="_blank"><img width="130" src="https://raw.githubusercontent.com/sloxqr240/djy/master/gb/130/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"></a><br><a href="https://git.io/fj9lh" target="_blank"><img width="130" src="https://raw.githubusercontent.com/sloxqr240/djy/master/gb/130/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"></a><br><a href="https://git.io/fj9lj" target="_blank"><img width="130" src="https://raw.githubusercontent.com/sloxqr240/djy/master/gb/130/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"></a><br><a href="https://git.io/fj98e" target="_blank"><img width="130" src="https://raw.githubusercontent.com/sloxqr240/djy/master/gb/130/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"></a><br><a href="https://git.io/fj98v" target="_blank"><img width="130" src="https://raw.githubusercontent.com/sloxqr240/djy/master/gb/130/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"></a><br><a href="https://github.com/sloxqr240/www/blob/master/README.md?dfh#9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/sloxqr240/djy/master/gb/130/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/sloxqr240/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/sloxqr240/djy/master/gb/130/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/sloxqr240/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/sloxqr240/djy/master/gb/130/huo-z3.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"></a><br><a href="https://github.com/sloxqr240/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/sloxqr240/djy/master/gb/130/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/sloxqr240/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/sloxqr240/djy/master/gb/130/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/sloxqr240/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/sloxqr240/djy/master/gb/130/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/sloxqr240/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/sloxqr240/djy/master/gb/130/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/sloxqr240/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/sloxqr240/djy/master/gb/130/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/sloxqr240/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/sloxqr240/djy/master/gb/130/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/sloxqr240/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/sloxqr240/djy/master/gb/130/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/sloxqr240/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/sloxqr240/djy/master/gb/130/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/sloxqr240/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/sloxqr240/djy/master/gb/130/liangan.jpg" title="海峡两岸的强烈反差"  alt="海峡两岸的强烈反差"></a><br><a href="https://github.com/sloxqr240/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/sloxqr240/djy/master/gb/130/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/sloxqr240/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/sloxqr240/djy/master/gb/130/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/sloxqr240/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/sloxqr240/djy/master/gb/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/sloxqr240/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/sloxqr240/djy/master/gb/130/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/sloxqr240/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/sloxqr240/djy/master/gb/130/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/sloxqr240/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/sloxqr240/djy/master/gb/130/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/sloxqr240/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/sloxqr240/djy/master/gb/130/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/sloxqr240/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/sloxqr240/djy/master/gb/130/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/sloxqr240/djy/master/gb/130/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/sloxqr240/www/blob/master/README.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/sloxqr240/djy/master/gb/130/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr>
+<tr><td><h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/27/n11750227.md#1" target="_blank">红三代卷入性侵女留学生案？红二代辟谣</a><br></h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/27/n11750227.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/15e2d9060b681c71_ttl7dayhAp_W6-600x400-1-150x120.jpg" align ="left"></a>日前，有一名大陆留学生在美国向媒体披露，自己在大陆遭美好世界航空集团董事长赵磊强暴。赵磊自称拥有超强红色背景，是被称为中共“延安五老”之一的谢觉哉和其第二任妻子王定国的外孙。但有红二代辟谣，否认赵是谢觉哉的外孙。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月28日 5:06 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/27/n11750208.md#1" target="_blank">【新闻大破解】美中角力台湾 2020攸关未来</a><br></h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/27/n11750208.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/2019-12-29.22-150x120.jpg" align ="left"></a>台湾2020大选倒数两周，中共动作加大，美国也在加戏。美中在台湾战场持续角力，2020关键战役将攸关未来。本期《走向2020 新闻大破解》将为观众解析。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月28日 4:35 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/27/n11750144.md#1" target="_blank">墨西哥对中国铝箔和压力锅征收关税</a><br></h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/27/n11750144.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/000_17V2TL-150x120.jpg" align ="left"></a>墨西哥经济部周五（12月27日）在官方公报上表示，在反倾销调查之后，该国决定对自中国进口的铝箔征收反补贴税。此前一天，该部表示，已经决定对自中国进口的铝制压力锅征税。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月28日 3:59 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/27/n11749711.md#1" target="_blank">【新闻看点】美中经济两重天 川普：与习签协议</a><br></h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/27/n11749711.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2018/11/1b4b324423b9f47e62cff9d9046e359a-150x120.jpg" align ="left"></a>中共商务部昨天表示，美中第一阶段贸易协议正在“履行法律审核、翻译校对等必要程序”。川普在24日也表示，正在翻译第一阶段的协议，他与习近平将签署最终的贸易协议。美中双方的说法，是贸易谈判的又一个积极动向。这是不是意味着枪声已经稀疏的贸易战要到终点了？......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月28日 3:55 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/27/n11749909.md#1" target="_blank">恐金融风险 中共2年任命12金融副省长??</a><br></h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/27/n11749909.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/03/gettyimages-1013061576-594x594-150x120.jpg" align ="left"></a>大陆金融高管被密集调任省级副职，31个省级行政区共有15名“金融副省长”。而大陆地方政府债务激增，银行风险处置艰难，中共密集调任金融高管担任副省长被指恐惧金融风险集中爆发。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月28日 3:25 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/27/n11749534.md#1" target="_blank">国民党挡反渗透法 林飞帆：到底在反对什么？</a><br></h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/27/n11749534.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/2d2dc83e4a7b2c70e7af8930aab15c85-150x120.jpg" align ="left"></a>立法院将在31日审议“反渗透法”草案。民进党副秘书长林飞帆27日表示，“反渗透法”并非仓促立法，当各政党都提法案，国民党不提版本，又不坐下来谈，“那你到底在反对什么？”且拿“反渗透法”跟318太阳花运动类比，根本是超乎脉络。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月28日 1:04 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/27/n11749624.md#1" target="_blank">香港圣诞催泪弹肆虐 检测报告揭政府谎言</a><br></h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/27/n11749624.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/1912240929222478-150x120.jpg" align ="left"></a>香港反送中运动以来，警方的催泪弹在香港各区肆虐，连圣诞节也不例外。最新的检测报告显示，催泪弹CS残留物驻留时间长，即使多次洗涤后残留量也足以致皮肤过敏，揭政府此前谎言。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月28日 12:52 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/27/n11749541.md#1" target="_blank">油价来到三个月来最高点 有三个原因</a><br></h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/27/n11749541.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2016/01/1407220846472483-150x120.jpg" align ="left"></a>周四（12月26日）油价上涨约1％，达到三个多月以来的最高。专家表示，油价上涨或是三方面原因促成：中美贸易战据估即将结束；美国原油库存减少以及石油产出减少。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月27日 11:14 PM							</td></tr>
@@ -18,7 +23,6 @@
 <tr><td><h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/27/n11747902.md#1" target="_blank">【拍案惊奇】国际曝光港警违规 台推反渗透法</a><br></h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/27/n11747902.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/15e420b2fd04d147_ttl7day2Di_20191226-ls-150x120.jpg" align ="left"></a>诞节刚刚过去，香港的朋友们在这个节日季，并不开心。上期节目，我们讲了香港在平安夜发生的一系列事件。今天的节目，我们会从平安夜的后续事件讲起，然后谈到目前国际社会，对香港警察暴力的最新评价。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月27日 12:51 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/27/n11747888.md#1" target="_blank">受贸易战影响 大陆上市公司近半净利缩水</a><br></h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/27/n11747888.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2016/03/1408220138272663-150x120.jpg" align ="left"></a>美中贸易战令大陆企业遭受重创，最新的数据显示，今年第三季度，大陆近半上市公司净利缩水，业界预估明年的企业盈利也好不到哪去。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月27日 12:37 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/27/n11748174.md#1" target="_blank">中共山东舰经台海 美国务院吁停止胁迫台湾</a><br></h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/27/n11748174.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2018/05/GettyImages-959767396-150x120.jpg" align ="left"></a>中共首艘自制航空母舰12月26日航经台湾海峡。对此，中华民国国防部表示，国军全程监侦国人可放心。美国国务院27日敦促中共，不要从事任何会危害台湾安全、社经体系及人民的“胁迫行径”。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月27日 12:34 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/27/n11748178.md#1" target="_blank">【直播预告】新唐人电视台2020跨年缤纷夜</a><br></h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/27/n11748178.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/6160c7b0d602315646131b856d7d61e8-150x120.jpg" align ="left"></a>新唐人电视台特别企划《2020跨年缤纷夜》直播节目，在2019年的最后一个夜晚，陪您盘点年度大事件，欢欢喜喜迎新年。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月27日 12:22 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/26/n11747657.md#1" target="_blank">被质疑耽误周杰伦出专辑 昆凌高EQ回应</a><br></h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/26/n11747657.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/10/1906252259561487-150x120.jpg" align ="left"></a>与大14岁的周杰伦育有一对子女的昆凌，最近在大陆真人秀中遭网民质疑她太爱玩，让周杰伦也被“传染”到处旅游，无法正常出专辑。对此，昆凌高EQ回应，说明周杰伦这样做可以四处找灵感。不过，她也表示：“他（周杰伦）确实该出专辑了！”......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月27日 8:06 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/26/n11747512.md#1" target="_blank">范冰冰到日本过圣诞 三四千港币购物直呼太贵</a><br></h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/26/n11747512.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2017/04/1612161004052669-150x120.jpg" align ="left"></a>经历逃税风波后复出的大陆女星范冰冰，12月25日在工作室微博贴出一则在日本过圣诞的短片。片中，她走在日本街头，显得心情大好。当走到一间法国水晶品牌的店铺时，她对该店的标价大约两千元（港币，下同）的圣诞树摆设爱不释手。不过，她在犹豫片刻后直呼“太贵”。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月27日 8:03 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/26/n11747758.md#1" target="_blank">陆银行花式吸金：磨刀、送猪肉、拦路、高息</a><br></h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/26/n11747758.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2015/12/1512271416372382-150x120.jpg" align ="left"></a>年内大陆银行业为了增加储户存款，各种“吸金”方式齐上，除了出售高利率存款产品之外，还推出存款送猪肉、存款免费磨刀、路口拦车招揽客户等营销方式。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月27日 7:58 AM							</td></tr>
@@ -27,10 +31,6 @@
 <tr><td><h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/26/n11746496.md#1" target="_blank">九位老人一起读法轮功著作 被构陷到检察院</a><br></h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/26/n11746496.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/2004-11-2-zfl-2-150x120.jpg" align ="left"></a>陕西省岐山县公安局调动30多名警察，于7月10日绑架了在一起学习法轮功著作的九位老人，非法抄家，抢劫私人财物。其中徐明侠、焦炳兰、亚兰、沈红奇一直被非法关押、构陷，邵启虎等五位老人被取保候审后放回家，目前也被构陷到检察院。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月27日 7:07 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/26/n11747584.md#1" target="_blank">置业者购房能力数据  一窥大陆民众收入概况</a><br></h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/26/n11747584.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2010/02/1002121143571813-150x120.jpg" align ="left"></a>近日一份调查显示，大陆购房置业的受访者中，超过一半只能接受最低价位选项（100万以下），近日有中国学者和社科院报告都提到中国民众收入问题表现在贫富差距大，家庭负债多。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月27日 6:56 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/25/n11744047.md#1" target="_blank">“你的密码归党管” 中共密码法明年上路</a><br></h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/25/n11744047.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/12-24-password-Cover02-150x120.jpg" align ="left"></a>从明年1月1日开始，中共政府就将开始实施“密码法”，规定所有网络密码由国家统一管理。按照中共国家密码管理局的说法，要坚决贯彻“党管密码”的根本原则，违反者可能背负刑事责任，而民事罚款最高可达100万人民币。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月27日 6:41 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/26/n11747582.md#1" target="_blank">分析：美中贸易战 明年进入三个关键期</a><br></h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/26/n11747582.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/10/GettyImages-1180493925-1-600x400-1-150x120.jpg" align ="left"></a>2020年是观察美中贸易关系更重要的一年，专家说，兑现承诺比谈判更为困难，明年进入三个关键期。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月27日 5:55 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/26/n11747231.md#1" target="_blank">【新闻看点】内幕：华为产品价格为何低廉？</a><br></h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/26/n11747231.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/05/f8e70f9b0207db46a17f73028300f77d-150x120.jpg" align ="left"></a>今天（12月26日）华尔街日报连发两篇文章，深度起底华为产品价格低的内幕，拆穿了华为的谎言。是中共的几百亿美元寄养，支持着“巨婴”成长。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月27日 5:00 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/26/n11747020.md#1" target="_blank">中共无孔不入  台学者：反渗透法绝对必要</a><br></h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/26/n11747020.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/16ae24f9ef5840a5c41034d202152fe2-150x120.jpg" align ="left"></a>民进党团预计在本月31日，于立法院三读通过“反渗透法”，学者认为，台湾遭中共无孔不入的入侵，“台湾不应让中共渗透变成合法的情况，绝对有立该法的必要性。”专家也说，随着“反渗透法”即将进入三读的程序，许多政治人物纷纷对此表态，“这就好像是照妖镜，把许多人的红色背景照出来，让老百姓加以检视他们的立场。”......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月27日 4:57 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/26/n11747230.md#1" target="_blank">【新闻看点】感激——美国人的年度关键词</a><br></h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/26/n11747230.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2004/01/401014827628-150x120.jpg" align ="left"></a>美国一家机构最近对1000多人调查，想了解人们对过去一年和目前的生活感受。结果高达70%的受访者选择了“感激（grateful）”，认为美国经济表现良好。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月27日 4:36 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/27/n11749335.md#1" target="_blank">大庆油罐车爆炸致4死 官方14天未通报</a><br></h3>黑龙江大庆一个县油罐车发生爆炸，事故发生14天后官方仍未通报。爆炸造成4人死亡。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月27日 8:24 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/27/n11749205.md#1" target="_blank">广州大学前院长获死刑 曾捅死同校处长夫妇</a><br></h3>12月27日，广州大学前院长谢某青，因故意杀人、贪污罪被判处死刑，罚款10万元人民币（下同）。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月27日 8:01 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/27/n11748552.md#1" target="_blank">湖北应城4.9级地震 600多户民居现裂缝</a><br></h3>湖北应城市12月26日晚发生4.9级地震后，陈河镇、杨岭镇等多地673户居民的房屋损毁。有消息指，一老人在下楼避险时，突发脑溢血死亡。但多家陆媒辟谣称与地震无关，无伤亡。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月27日 5:11 PM							</td></tr>
