--- a/gb/ncid281_3.md
+++ b/gb/ncid281_3.md
@@ -28,6 +28,6 @@
 <tr><td><h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/9/23/n11539504.md#1" target="_blank">揭秘：华人夫妇涉泄密给中共 美国梦变噩梦</a><br></h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/9/23/n11539504.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/04/GettyImages-75960147-FBI-600x400-150x120.jpg" align ="left"></a>在周宇的脸书账号上，有许多近期的照片，其中一张是今年一月份拍摄的照片，面带微笑的周宇出现在纳斯达克，正准备敲闭市钟，这是他在上市公司Avalon GloboCare Corp的角色之一。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月23日 11:35 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/9/22/n11539304.md#1" target="_blank">为何总爱自导自演？徐峥的答案笑翻众人</a><br></h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/9/22/n11539304.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2015/09/1509141551211693-150x120.jpg" align ="left"></a>大都饰演喜剧角色的大陆男星徐峥，近期受邀参加综艺节目《脱口秀大会2》。在9月22日播出的节目中，他不仅坦承了自己对于喜剧演员的理解，而且首次披露自己为何总爱自导自演。其答案笑翻众人。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月23日 7:51 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/9/21/n11537058.md#1" target="_blank">曼哈顿明慧学校第一堂课 专家谈奉茶典礼</a><br></h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/9/21/n11537058.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/e21305dbd7c7f57c162e0a0034aaa27d-600x400-1-150x120.jpg" align ="left"></a>9月15日，位于曼哈顿华埠市中心坚尼路的明慧学校周末班正式开课。老师授课之前，一场传统的奉茶敬师仪式引发家长围观和思考，成为明慧学校曼哈顿分校的第一堂课。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月22日 7:41 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/10/19/n11598939.md#1" target="_blank">福建一幼儿园只招干部子女？被批搞特殊化</a><br></h3>2019年闽南师范大学附属幼儿园招生条件定为“在编在岗的干部其三代以内直系子女”，引发外界引发关注。该校宣传部门称，此条件由芗城区有关部门制定。网民质问：敢利用权力搞特殊化，为什么又不敢面对民众的质询？......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年10月24日 5:05 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/9/20/n11535927.md#1" target="_blank">胡歌庆生 感念过世母亲连续一周梦里叮咛</a><br></h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/9/20/n11535927.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2018/11/1602240342281487-150x120.jpg" align ="left"></a>大陆男星胡歌9月20日迎来37岁生日，当天深夜，他在微博发文，对年初离世的母亲说：“连续一周总是梦到你，直到今天我才明白，这不是日有所思……我一切都好，回吧，我不会忘记，你在梦里的叮嘱。”其特别的生日感言，令人洒泪。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月21日 7:23 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/ncid281_2.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/sloxqr240/djy/blob/master/gb/ncid281.md#1">1</a>&nbsp;&nbsp;<a href="https://github.com/sloxqr240/djy/blob/master/gb/ncid281_2.md#1">2</a>&nbsp;&nbsp;3&nbsp;&nbsp;<a href="https://github.com/sloxqr240/djy/blob/master/gb/ncid281_4.md#1">4</a>&nbsp;&nbsp;<a href="https://github.com/sloxqr240/djy/blob/master/gb/ncid281_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/sloxqr240/djy/blob/master/gb/ncid281_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/sloxqr240/djy/blob/master/gb/ncid281_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/sloxqr240/djy/blob/master/gb/ncid281_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/sloxqr240/djy/blob/master/gb/ncid281_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/sloxqr240/djy/blob/master/gb/ncid281_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/sloxqr240/djy/blob/master/gb/ncid281_4.md#1">下一页</a></h3></td></tr>
 </table><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/sloxqr240/djy/blob/master/gb/ncid281_3.md#1<br><a href="https://github.com/sloxqr240/djy/blob/master/gb/ncid281_3.md#1"><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/sloxqr240/djy/blob/master/gb/ncid281_3.md%231" title="分享本文章"></a><br>原文地址： <a href="http://www.epochtimes.com/gb/ncid281_3.htm">http://www.epochtimes.com/gb/ncid281_3.htm</a>    （国内需<a href="https://git.io/JesJV">下载翻墙软件</a>才能访问）</p>
