--- a/gb/nf3046_2.md
+++ b/gb/nf3046_2.md
@@ -6,9 +6,7 @@
 跨页尺寸点击下载a3-166
 
 单页尺寸点击下载a4-166......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年10月22日 10:01 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/10/20/n11601191.md#1" target="_blank">组图：法轮功纽约布鲁克林游行  震撼人心</a><br></h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/10/20/n11601191.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/10/LD70759-150x120.jpg" align ="left"></a>“金秋送福撒甘露，大法弟子有真相”，在全球退党大潮达三亿四千万人退出中共党、团、队之际，20日（周日）纽约近千名法轮功学员在布鲁克林八大道繁华街区举行盛大游行，十几个方阵延绵十多条街区，彩旗花船、龙腾狮舞、军乐锣鼓，正气威震八方。壮观的游行再一次将法轮大法的美好带给布鲁克林民众。
-
-游行从八大道68街前往42街，历时2个小时，浩浩荡荡的队伍展示上百条中英.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年10月21日 7:45 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/11/22/n11673018.md#1" target="_blank">每日三退声明精选（2019/11/21）</a><br></h3>十年前我第一次开始了解中共统治真相后一直忍气吞声默默忍受着，但现在看到中共在新疆、在香港以及对宗教律师团体的残酷迫害，我无法允许自己在沉默下去，在此我声明退出参加加入的中共少先队。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月22日 11:33 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/11/21/n11670314.md#1" target="_blank">每日三退声明精选（2019/11/20）</a><br></h3>自共匪邪教建政一来一直被共匪思想洗脑，到现在才彻底看清红色暴政，看到大陆?层受尽压迫和财产剥夺，香港民主运动无人性的暴力血腥震压心里说不出什么滋味，一个卖国的邪党还天天叫人民爱党爱国变态至极，自己思想卖国引进马列思想，行为卖国送掉中国无数国土还残杀无数中国人民，真是人间魔鬼，早晚会下地狱，为了远离邪恶，我申请退出小时候不知加入的少先队。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月21日 10:44 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/11/20/n11667707.md#1" target="_blank">每日三退声明精选（2019/11/19）</a><br></h3>中共暴行甲天下，戾暴恶行人人骂。
 衣冠禽兽伪君子，香港暴行上演了。
