--- a/gb/ncid282_3.md
+++ b/gb/ncid282_3.md
@@ -16,7 +16,9 @@
 <tr><td><h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/16/n11725780.md#1" target="_blank">汉翔17日与洛马签约 推台为F16亚太维修中心</a><br></h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/16/n11725780.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/4f7d88f4e9fcd478f0a728abf37a0da5-150x120.jpg" align ="left"></a>中华民国空军正将现有144架F-16A/B升级为F-16V（Block20），并向美国采购66架全新F-16V（Block70），合计达到210架，成为亚太国家当中拥有F-16战机数量最多的国家；汉翔17日将与美商洛克希德马丁公司签署策略联盟合作协议，推动台湾成立F-16战机的亚太维修中心。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月17日 12:48 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/16/n11725212.md#1" target="_blank">天津权健董事长束昱辉等12人一审开庭</a><br></h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/16/n11725212.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/01/quanjian-150x120.jpg" align ="left"></a>12月16日，天津权健自然医学科技发展有限公司（下称权健集团）董事长束昱辉等12人组织、领导传销活动一案开审，被告均当庭表示认罪。此案择期宣判。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月16日 5:20 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/15/n11724466.md#1" target="_blank">晒温馨合照为父亲庆生 黎姿获赞孝顺女儿</a><br></h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/15/n11724466.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2017/01/170109232642100615-150x120.jpg" align ="left"></a>今年48岁的黎姿（黎珈而），每年都为父母庆祝生日。12月15日晚，她在facebook 晒出家人的一组合照为父亲庆生，画面十分温馨。看到82岁的黎爸儿孙绕膝，享受天伦之乐，许多网友大赞黎姿是“孝顺女儿”。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月16日 9:10 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/15/n11724316.md#1" target="_blank">广东物业停电梯逼居民缴费 老人爬9楼猝死</a><br></h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/15/n11724316.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/20191213144123_65040-150x120.png" align ="left"></a>为逼部分拖欠物业费的业主交钱，广东阳春一小区电梯被物业关停，六旬老人爬楼梯时猝死。医务人员被迫爬9楼，错过了抢救黄金时间。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月16日 1:14 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/19/n11731783.md#1" target="_blank">加拿大升级中国旅行警告：慎防中共随意执法</a><br></h3>12月18日，加拿大政府提升了去中国旅行的风险警告。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月20日 12:31 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/19/n11732530.md#1" target="_blank">西安老师连打学生耳光 家长曝全班几乎都被打</a><br></h3>12月17日，陕西省西安市华清园小学六年级某班的学生家长群里传出一段老师打学生的视频。视频中，一名女老师揪着一名男生的耳朵，将他拉到门后的墙角，然后连打他多个耳光。有家长表示，除了一名学习很好的女生外，班里的学生几乎都被打过。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月19日 5:08 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/19/n11731456.md#1" target="_blank">【唐靖远快评】中共战狼式大外宣频频触礁</a><br></h3>最近这两天，在中共大外宣领域接连发生大事件，而且当事人称得上是一个比一个大牌，一时间网络舆情汹涌，可以说赚足了公众的目光。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月19日 2:02 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/19/n11731537.md#1" target="_blank">上海3家乐高中心关停 或面临倒闭潮</a><br></h3>外滩、瑞虹、金桥三家上海乐高活动中心“关停”的消息持续发酵。上百名购买了课程的家长呼喊维权。由于乐高集团已在10月取消中国经销商西觅亚的授权，未来可能还有150家乐高活动中心面临倒闭。
 
 微信公众号“蓝魔方少儿”发文称，乐高活动中心上海外滩店、金桥店和瑞虹店16日大门紧闭，门上贴着“闭店声明”，而门市所留的联络方式也打不通，令许多家长大感错愕。
@@ -31,7 +33,5 @@
 <tr><td><h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/17/n11727111.md#1" target="_blank">贵州发生煤矿事故 致14人死亡2人被困</a><br></h3>据陆媒报导，12月17日1时30分许，贵州安龙县广隆煤矿发生一起煤与瓦斯突出事故。经初步核实，当班井下作业人员23人，7人安全升井。截至9时，事故造成14人死亡，2人被困。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月17日 11:25 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/16/n11724685.md#1" target="_blank">北京发大雾黄色预警 局地能见度低于500米</a><br></h3>据北京市气象局官网消息，今早（16日）8时，北京市发布大雾黄色预警，且多个地区下雪，其中延庆最大降雪已经达到了7.3毫米。受天气影响，首都机场已取消140架次航班。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月16日 9:43 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/15/n11724326.md#1" target="_blank">《延禧》女星拔火罐出意外 后背手臂被烧烂</a><br></h3>曾在《延禧攻略》剧集中饰演“魏璎珞”之姊“魏璎宁”的大陆女星邓莎，12月14日在微博发文透露，日前工作结束后到SPA（拉丁文“Solus Por Aqua”的简写，美容店）店做拔火罐，没想到发生意外。在她晒出的照片中，她的后背和手臂被严重烧伤，伤口触目惊心，消息一度登上热搜榜首。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月16日 9:10 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/15/n11723449.md#1" target="_blank">陕西工人遭欠薪申请仲裁 人社局称人手不足拒绝</a><br></h3>陕西榆林子洲县三丰油脂公司讨薪工人到当地人社局申请仲裁，却收到劳动争议仲裁厅“人员不够，不受理案件”的回复文书，近日，这份半年前开出的“不予受理案件通知书”在网上曝光，引发争议。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月15日 3:43 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/15/n11723514.md#1" target="_blank">山西女子修脚店拔肉刺被收费4.6万元</a><br></h3>近日，山西孝义市民郭先生的妻子因脚底长肉刺去修脚店治疗，拔一根肉刺10元，最后竟花费4.66万元。郭先生怀疑被骗，店主称拔出后当场数，至于是不是拔出4660根则不清楚。最后经调解，店方退回4万多元。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月15日 2:26 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/ncid282_2.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/sloxqr240/djy/blob/master/gb/ncid282.md#1">1</a>&nbsp;&nbsp;<a href="https://github.com/sloxqr240/djy/blob/master/gb/ncid282_2.md#1">2</a>&nbsp;&nbsp;3&nbsp;&nbsp;<a href="https://github.com/sloxqr240/djy/blob/master/gb/ncid282_4.md#1">4</a>&nbsp;&nbsp;<a href="https://github.com/sloxqr240/djy/blob/master/gb/ncid282_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/sloxqr240/djy/blob/master/gb/ncid282_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/sloxqr240/djy/blob/master/gb/ncid282_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/sloxqr240/djy/blob/master/gb/ncid282_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/sloxqr240/djy/blob/master/gb/ncid282_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/sloxqr240/djy/blob/master/gb/ncid282_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/sloxqr240/djy/blob/master/gb/ncid282_4.md#1">下一页</a></h3></td></tr>
 </table><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/sloxqr240/djy/blob/master/gb/ncid282_3.md#1<br><a href="https://github.com/sloxqr240/djy/blob/master/gb/ncid282_3.md#1"><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/sloxqr240/djy/blob/master/gb/ncid282_3.md%231" title="分享本文章"></a><br>原文地址： <a href="http://www.epochtimes.com/gb/ncid282_3.htm">http://www.epochtimes.com/gb/ncid282_3.htm</a>    （国内需<a href="https://git.io/JesJV">下载翻墙软件</a>才能访问）</p>
