--- a/gb/nf3046_4.md
+++ b/gb/nf3046_4.md
@@ -13,6 +13,7 @@
 <tr><td><h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/8/7/n11436959.md#1" target="_blank">一位中国老太在欧洲不平凡的20年（下）</a><br></h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/8/7/n11436959.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/08/f04334acc2f7f6640bab6c1a76a7987b-150x120.jpg" align ="left"></a>瑞士伯尔尼法轮功学员潘淑珍在卢塞恩景点劝中国游客三退的故事。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年08月23日 12:36 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/8/13/n11449390.md#1" target="_blank">网民白宫请愿连署：将中共定为恐怖组织</a><br></h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/8/13/n11449390.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/08/CCP-150x120.jpg" align ="left"></a>有鉴于香港局势恶化、港警暴力升级，有民众在美国白宫请愿网站“我们人民”（We the People）发起征签活动，要求美国政府正式将幕后黑手中国共产党定为恐怖组织。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年08月20日 1:00 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/8/13/n11450650.md#1" target="_blank">白宫请愿连署  将中共定为恐怖组织</a><br></h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/8/13/n11450650.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/08/9ca38853a9d3c7fedfdac1e3ab308a9e-150x120.png" align ="left"></a>有鉴于香港局势恶化、港警暴力升级，有民众在美国白宫请愿网站“我们人民”（We the People）发起征签活动，要求美国政府正式将幕后黑手中国共产党定为恐怖组织。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年08月20日 12:30 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/9/21/n11536505.md#1" target="_blank">每日三退声明精选（2019/09/20）</a><br></h3>恶党又在借维稳来迫害民众，而真正的不稳定因素都是恶党自己搞出来的，反过来又借维稳来大肆欺压掠夺民众，真正的动乱之源就是中共，中共才是真正的邪教。中共气数已尽，作恶到头终有报。退出我们所加入的邪党组织保平安。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月21日 11:37 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/9/20/n11534046.md#1" target="_blank">每日三退声明精选（2019/09/19）</a><br></h3>作为一名大学生，看到中共首都各高校都为赤匪统治中国70周年绞尽脑汁，大搞面子工程，为六四三十周年的今日深感痛心！今日的大学对不起当初流血的师生！......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月20日 11:49 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/9/19/n11531343.md#1" target="_blank">每日三退声明精选（2019/09/18）</a><br></h3>作为华为员工，我糊里糊涂加入了中国共产党。我看到华为专门监控老百姓，太坏了。现声明退出邪恶的中国共产党。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月19日 11:21 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/9/18/n11528820.md#1" target="_blank">每日三退声明精选（2019/09/17）</a><br></h3>作为在中国长大的小孩，我小时候也糊里糊涂加入了少先队和共青团。甚至我还曾经对共匪歪曲事实的过往“光辉历史”宣传深信不疑，真心认为过去的的所谓“革命先烈”是好的，只是掌权后人心变坏了。我越长大越认识到这是一个黑白颠倒的社会，自由和公义在这里被践踏，奴役和奸诈却是无处不在。但我不知道为什么会这样。所有人都告诉我，这很正常，哪里都一样，你要长大要适应社会，而不是让.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月18日 11:26 AM							</td></tr>
@@ -39,6 +40,5 @@
 消.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年08月21日 10:08 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/8/20/n11464667.md#1" target="_blank">每日三退声明精选（2019/08/19）</a><br></h3>在中共这个国度是没我真正的自由的，他们面对民众表面一套，背后另一套，没有证据，他们就会造证据，大力宣扬黑化对象，看到他们表皮光鲜，却不知背后黑暗无边。在内地只能等待真正的光明到来，虽然在做着微不足道的事情。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年08月20日 11:35 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/8/16/n11456698.md#1" target="_blank">每日三退声明精选（2019/08/15）</a><br></h3>年轻的时候因为在大陆的关系被中共所蒙骗。后来自己上高中的时候和出来留学的时候分别接触了翻墙和大纪元。在初中的时候发生了一些事情，让我觉得对中共十分失望。后来看到了一些历史真相和九评以及终极目的两书后，更加明白中共和共产邪说是不可能改变的，再加上最近香港发生的中共对港镇压，于是对中共彻底绝望。今天刚好在国外，决定趁这个机会，退出中共党团队，不再被这个邪恶带到沟.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年08月16日 11:13 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/8/15/n11454054.md#1" target="_blank">每日三退声明精选（2019/08/14）</a><br></h3>从来没想过加入党员。团员也刚开始教过团费，少先队倒是红领巾天天带了，刚开始还有点好感，团员期懵懂，直到看到8964，法轮功，彻底醒悟。后学会翻墙看到《伪火》片，眼眶湿润，从此坚决拒绝洗脑，追求真相，同时扩散伪火此片，效果颇佳，感谢法轮功。我，不离，和我的妻子不弃，在此郑重声明，退出中共少先队、共青团等中共邪党相关组织，迎接美好的未来。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年08月15日 11:21 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/nf3046_3.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/sloxqr240/djy/blob/master/gb/nf3046.md#1">1</a>&nbsp;&nbsp;<a href="https://github.com/sloxqr240/djy/blob/master/gb/nf3046_2.md#1">2</a>&nbsp;&nbsp;<a href="https://github.com/sloxqr240/djy/blob/master/gb/nf3046_3.md#1">3</a>&nbsp;&nbsp;4&nbsp;&nbsp;<a href="https://github.com/sloxqr240/djy/blob/master/gb/nf3046_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/sloxqr240/djy/blob/master/gb/nf3046_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/sloxqr240/djy/blob/master/gb/nf3046_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/sloxqr240/djy/blob/master/gb/nf3046_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/sloxqr240/djy/blob/master/gb/nf3046_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/sloxqr240/djy/blob/master/gb/nf3046_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/sloxqr240/djy/blob/master/gb/nf3046_5.md#1">下一页</a></h3></td></tr>
 </table><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/sloxqr240/djy/blob/master/gb/nf3046_4.md#1<br><a href="https://github.com/sloxqr240/djy/blob/master/gb/nf3046_4.md#1"><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/sloxqr240/djy/blob/master/gb/nf3046_4.md%231" title="分享本文章"></a><br>原文地址： <a href="http://www.epochtimes.com/gb/nf3046_4.htm">http://www.epochtimes.com/gb/nf3046_4.htm</a>    （国内需<a href="https://git.io/JesJV">下载翻墙软件</a>才能访问）</p>
